Fix title of field_edoweb_title_other
Please run update script as the title is set on instance creation. No
need to re-upload translation file.

--- a/german.po
+++ b/german.po
@@ -473,7 +473,7 @@ msgid "Titel"
 msgstr ""
 
 #: (duplicate) edoweb/edoweb.install:1861
-msgid "Untertitel"
+msgid "Zusatz zum Sachtitel"
 msgstr ""
 
 #: (duplicate) edoweb/edoweb.install:1869
