added translations for createdBy and astModifiedBy

--- a/german.po
+++ b/german.po
@@ -409,7 +409,7 @@ msgstr "Einzelplatz"
 
 #: edoweb/edoweb.module:1811
 msgid "Access rights for @id updated."
-msgstr ""
+msgstr "Zugriffsrechte für das Objekt @id aktualisiert "
 
 #: edoweb/edoweb.module:1815
 #, fuzzy
@@ -450,7 +450,7 @@ msgstr "Extras"
 
 #: edoweb/edoweb.module:424
 msgid "Access"
-msgstr ""
+msgstr "Zugriffsrechte"
 
 #: (duplicate) edoweb/edoweb.install:1840
 msgid "HT Nummer"
@@ -916,6 +916,12 @@ msgstr ""
 #: edoweb_storage/edoweb_storage.module:34
 msgid "Configuration for the Edoweb Storage module."
 msgstr ""
+
+msgid "createdBy"
+msgstr "Erfasser"
+
+msgid "lastModifiedBy"
+msgstr "Letzter Bearbeiter"
 
 #~ msgid "The entity %id has been reloaded."
 #~ msgstr "Das Objekt %id wurde neu geladen."
