Translate strings for institution, type and medium
Please update translations at admin/config/regional/translate/import

--- a/german.po
+++ b/german.po
@@ -931,6 +931,15 @@ msgstr "Erfasser"
 msgid "lastModifiedBy"
 msgstr "Letzter Bearbeiter"
 
+msgid "medium"
+msgstr "Medium"
+
+msgid "type"
+msgstr "Publikationstyp"
+
+msgid "institution"
+msgstr "Institution"
+
 #~ msgid "The entity %id has been reloaded."
 #~ msgstr "Das Objekt %id wurde neu geladen."
 
